# ML-Spam-Phising-Detector

./: .env.production.example  .gitignore  CI_CD_SETUP.md  DEPLOYMENT_RENDER.md  README.md  README_FULL_STACK.md  docker-compose.yml  fix_ci_issues.sh  pyproject.toml  render.yaml  render.yaml.example
.github/: dependabot.yml  pull_request_template.md
.github/scripts/: setup-branch-protection.sh
.github/workflows/: cd.yml  ci.yml  dependabot-auto-merge.yml  dependabot-batch.yml  security.yml
backend/: README.md  pyproject.toml
backend/models/: phishing_detector_metadata_20260105_195259.joblib  phishing_detector_model_latest.joblib
backend/models/v1.0.0/: phishing_detector_model.joblib  phishing_detector_vectorizer.joblib
docs/: PROJECT_STRUCTURE.md
frontend/: README.md  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: EmailForm.tsx  GaugeChart.tsx  Header.tsx  ResultsPanel.tsx
frontend/src/hooks/: useClassifyEmail.ts
historyMD/: DOCKER_GUIDE.md  PRE_COMMIT_CHECKLIST.md  QUICK_START.md  REFACTOR_SUMMARY.md
models/: .gitkeep  phishing_detector_metadata_latest.joblib  phishing_detector_model_latest.joblib  phishing_detector_vectorizer_latest.joblib  spam_detector_metadata_latest.joblib  spam_detector_model_latest.joblib  spam_detector_vectorizer_latest.joblib
models/v1.0.0/: phishing_detector_metadata.joblib  phishing_detector_model.joblib  phishing_detector_vectorizer.joblib  spam_detector_metadata.joblib  spam_detector_model.joblib  spam_detector_vectorizer.joblib
src/backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  pytest.ini
src/backend/models/: README.md  phishing_detector_metadata_latest.joblib  phishing_detector_vectorizer_latest.joblib  spam_detector_metadata_20260105_194125.joblib  spam_detector_metadata_20260105_194602.joblib  spam_detector_metadata_latest.joblib  spam_detector_model_20260105_194602.joblib  spam_detector_vectorizer_latest.joblib
src/backend/models/v1.0.0/: spam_detector_vectorizer.joblib
src/backend/spam_detector/domain/services/: __init__.py
src/backend/spam_detector/infrastructure/api/: main.py
src/backend/spam_detector/infrastructure/api/schemas/: requests.py
src/backend/spam_detector/infrastructure/cli/: commands.py
src/backend/spam_detector/infrastructure/web/css/: dark-theme.css
src/backend/spam_detector/utils/: __init__.py  mlflow_config.py  train_with_mlflow.py
src/backend/src/spam_detector/domain/: constants.py
src/backend/src/spam_detector/domain/entities/: __init__.py  prediction.py  threat_report.py
src/backend/src/spam_detector/domain/ports/: model_loader.py
src/backend/src/spam_detector/infrastructure/api/: main.py
src/backend/src/spam_detector/infrastructure/api/routers/: __init__.py
src/backend/src/spam_detector/infrastructure/web/js/: app.js
src/backend/tests/integration/api/: test_api.py
src/backend/tests/integration/application/: test_container.py
src/backend/tests/integration/cli/: test_cli.py
src/backend/tests/integration/infrastructure/adapters/: test_formatters.py  test_joblib_model_loader.py  test_sklearn_predictor.py
src/backend/tests/unit/application/use_cases/: test_classify_email.py  test_list_models.py
src/backend/tests/unit/domain/entities/: test_classifier_metadata.py  test_email.py  test_prediction.py
src/backend/tests/unit/domain/services/: test_email_classifier.py
src/frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js
src/frontend/css/: styles.css
src/frontend/js/: app.js
src/frontend/src/components/: ApiStatus.tsx  GaugeChart.tsx  Header.tsx
src/frontend/src/services/: api.ts
src/frontend/src/types/: index.ts
src/ml_engineer_course/application/: __init__.py  container.py
src/ml_engineer_course/config/: __init__.py  settings.py
src/ml_engineer_course/domain/: __init__.py
src/ml_engineer_course/utils/: mlflow_config.py  train_with_mlflow.py
tests/integration/api/: test_api.py
tests/integration/application/: test_container.py
tests/integration/cli/: test_cli.py
(+47 files in other folders)
