[project]
name = "ml-engineer-course"
version = "0.1.0"
description = "Curso completo de Machine Learning Engineer - De fundamentos a producción"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "AIR", email = "air@example.com" }
]

dependencies = [
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.6.0",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
    "nltk>=3.8.0",
    "seaborn>=0.13.2",
    "joblib>=1.3.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "typer>=0.12.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]

[project.scripts]
email-classifier = "ml_engineer_course.infrastructure.cli:cli_main"
email-classifier-api = "ml_engineer_course.infrastructure.api:run_api"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",  # Para testing con FastAPI TestClient
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Relajado para notebooks ML

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=src --cov-report=term-missing"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
]
