[project]
name = "spam-phishing-detector"
version = "1.0.0"
description = "Production-ready SPAM and PHISHING email detector using Machine Learning"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Adrian Infantes Romero", email = "adrian@example.com" }
]

dependencies = [
    "numpy>=1.26.0,<3.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.6.0",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
    "nltk>=3.8.0",
    "seaborn>=0.13.2",
    "joblib>=1.3.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "typer>=0.12.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "mlflow>=3.8.1",
]

[project.scripts]
spam-detector = "spam_detector.infrastructure.cli:cli_main"
spam-detector-api = "spam_detector.infrastructure.api:run_api"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",  # Para testing con FastAPI TestClient
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Relajado para notebooks ML

[tool.hatch.build.targets.wheel]
packages = ["spam_detector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --cov=spam_detector --cov-report=term-missing"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
]

[tool.ruff.lint.per-file-ignores]
"**/api/routers/*.py" = ["B008"]  # Allow function calls in argument defaults (FastAPI Depends)
"**/infrastructure/cli/*.py" = ["B008"]  # Allow typer.Option in argument defaults
"**/utils/*.py" = ["F401", "F841"]  # Allow unused imports and variables in utils (placeholders)
